@@ -1,14 +1,14 @@
 # control.sh
 # This file must be updated with the proper parameters before
 # BOARD18update is run to update the BOARD18 web site.
-# 
-# This is version 2 of this script.
+# Do not put trailing "/" on paths below!
+# This is version 3 of this script.
 
 # Set BD18Site to the root of the BOARD18 web site.
-BD18Site=~/dev?.board18.org/
+BD18Site=~/prod1.board18.org
 
 # Set BD18Old to the to be created backup of the BOARD18 web site.
-BD18Old=~/dev?.board18.old/
+BD18Old=~/prod1.board18.old
 
 # Set BD18New to the webroot directory in the new BOARD18 release.
-BD18New=~/board18-x.x.x/webroot/
+BD18New=~/board18-1.1.6/webroot
